--- a/basic-agent-1/Dockerfile-agent
+++ b/basic-agent-1/Dockerfile-agent
@@ -1,7 +1,7 @@
-# FROM ghcr.io/hdl/sim/osvb
+FROM ghcr.io/hdl/sim/osvb
 
 # https://github.com/RDSik/FPGA-Tools-Docker
-FROM ghcr.io/r0d0s/fpga_tools:latest
+# FROM ghcr.io/r0d0s/fpga_tools:latest
 
 WORKDIR /app
 
@@ -11,14 +11,13 @@ RUN apt-get update && \
         wget build-essential libssl-dev zlib1g-dev \
 	    libncurses5-dev libncursesw5-dev libreadline-dev libsqlite3-dev \
 		libgdbm-dev libdb5.3-dev libbz2-dev libexpat1-dev liblzma-dev tk-dev \
-        git tree \
+        git tree bash \
     && apt-get clean \
     && rm -rf /var/list/apt/lists/*
 
 
 # Install `uv` for managing Python.
 # https://docs.astral.sh/uv/guides/integration/docker/#installing-uv
-FROM python:3.12-slim-trixie
 COPY --from=ghcr.io/astral-sh/uv:latest /uv /uvx /bin/
 
 # Fix cache path.
@@ -37,6 +36,12 @@ RUN mkdir -p /code && chmod 777 /code
 
 # Copy agent code
 COPY agent.py /app/agent.py
+
+RUN which iverilog
+
+# Switch shell to bash. ChatGPT is better at writing valid `bash` than `sh`.
+SHELL ["/bin/bash", "-c"]
+ENV SHELL=/bin/bash
 
 # Set the entrypoint
 ENTRYPOINT ["uv", "run", "/app/agent.py"]
